--- a/src/index.css
+++ b/src/index.css
@@ -13,46 +13,46 @@ code {
 }
 
 .main-container {
-  height: 100vh !important;
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .quiz-container {
-  width: 900px !important;
-  height: 500px !important;
-  padding: 50px !important;
-  border: solid 10px !important;
-  border-radius: 20px !important;
-  border-color: #00c898 !important;
+  width: 900px;
+  height: 500px;
+  padding: 50px;
+  border: solid 10px;
+  border-radius: 20px;
+  border-color: #00c898;
 }
 
 .quiz-form {
-  height: 100% !important;
-  display: flex !important;
-  flex-direction: column !important;
-  justify-content: space-between !important;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .result-form {
-  height: 100% !important;
-  display: flex !important;
-  flex-direction: column !important;
-  justify-content: space-between !important;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .text-title {
-  font-size: 1.5rem !important;
+  font-size: 1.5rem;
   font-weight: bold;
-  letter-spacing: 0.38px !important;
+  letter-spacing: 0.38px;
   color: #1a283e;
 }
 
 .text-sub-title {
-  font-size: 1.25rem !important;
+  font-size: 1.25rem;
   font-weight: 500;
-  letter-spacing: 0.38px !important;
+  letter-spacing: 0.38px;
   color: #1a283e;
 }
 
@@ -66,8 +66,8 @@ code {
 }
 
 .normal-btn {
-  width: 180px !important;
-  height: 70px !important;
+  width: 180px;
+  height: 70px;
   font-size: 20px !important;
   font-weight: bold !important;
   background-color: #fff !important;
@@ -87,8 +87,8 @@ code {
 }
 
 .quiz-start {
-  width: 350px !important;
-  height: 130px !important;
+  width: 350px;
+  height: 130px;
   font-size: 50px !important;
   font-weight: bold !important;
   background-color: #fff !important;
@@ -137,7 +137,7 @@ code {
 }
 
 .h-100 {
-  height: 100% !important;
+  height: 100%;
 }
 
 .mt-100 {
@@ -177,7 +177,7 @@ code {
 }
 
 .option span {
-  font-size: 1.5rem !important;
+  font-size: 1.5rem;
 }
 
 .option:hover {
